# hansa_teutonica

./: .gitignore  README  cabal.project
byzantium/src/: .spawn.lua.swp  01_constants.lua  02_urls.lua  03_text.lua  actions.lua  ask.lua  basicActions.lua  basicInteractions.lua  game.lua  geometry.lua  lib.lua  main.lua  map.lua  ruleSummary.lua  spawn.lua  ui_lib.lua
byzantium/utils/: genMap.lua
hansa-teutonica/map-hack/: HS_orig_45.txt  README  static.lua
hansa-teutonica/map-hack2/: import.lua
hansa-teutonica/map-hack3/: export  exportMap.lua
hansa-teutonica/src/: 01_constants.lua  actions.lua  ask.lua  basic_action.lua  britania23.lua  endGame.lua  game.lua  lib.lua  load_save.lua  main_menu.lua  mapEast.lua  mapOriginal.lua  mapOriginal23.lua  out  spawn.lua
ht-hs/: CHANGELOG.md  cabal.project  ht-hs.cabal
ht-hs/app/: Actions.hs  EditorMain.hs  Main.hs
ht-hs/app/Actions/: Bonus.hs  Common.hs  Complete.hs  FixedBonus.hs  Hire.hs  Move.hs  Place.hs
ht-hs/common-interact/: CHANGELOG.md  common-interact.cabal
ht-hs/common-interact/src/: AppTypes.hsig
ht-hs/common-interact/src/Common/: Interact.hs  Server.hs
ht-hs/common-utils/: CHANGELOG.md  common-utils.cabal
ht-hs/common-utils/src/Common/: Basics.hs  CallJS.hs  Field.hs  SaveLoad.hs  Utils.hs
ht-hs/scripts/: install
ht-hs/src/: .Stats.hs.swp  Action.hs  Actions.hs  AppTypes.hs  Area.hs  Basics.hs  Board.hs  Bonus.hs  Edge.hs  Event.hs  Game.hs  Geometry.hs  Interact.hs  Main.hs  Node.hs  Player.hs  PlayerState.hs  Question.hs  Stats.hs  Turn.hs  Utils.hs
ht-hs/src/Actions/: Place.hs
ht-hs/src/Board/: Britannia3.hs  Britannia45.hs  Builder.hs  East.hs  Hansa3.hs  Hansa45.hs  Index.hs
ht-hs/src/Common/: Basics.hs  Interact.hs  Server.hs
ht-hs/ui/: ask.js  board.js  bonus.js  index.html  log.js  main.js  playerBoard.js  score.js  sock.js  style.css  turn.js  workers.js
ht-hs/ui/editor/: answer.js  east.js  editor.js  ht-23.js  ht-45.js  index.html  q_britannia_23.js  q_britannia_45.js  q_east.js  q_ht_23.js  q_ht_45.js  question.js
ht-hs/ui/map/: britannia-23.js  britannia-45.js  britannia_23.js  britannia_45.js  east.js  ht_23.js  ht_45.js  layout.js
map-hack/: ParseMap.hs
mexica/resources/: README.txt
mexica/src/: 01_globals.lua  02_urls.lua  actions.lua  ask.lua  basic_actions.lua  events.lua  geometry.lua  lib.lua  locMap.lua  map.lua  mexica.lua  spawn.lua  ui_lib.lua
mexica/utils/: .map.txt.swp  genMap.lua  map.txt
quebec/src/: 01_globals.lua  02_urls.lua  actions.lua  ask.lua  basic_actions.lua  distrcict_actions.lua  game.lua  lib.lua  load_save.lua  main.lua  map.lua  spawn.lua  ui_lib.lua
ride_the_rails/src/: 01_constants.lua  02_urls.lua  ask.lua  basic_actions.lua  game.lua  geometry.lua  lib.lua  load_save.lua  locMap.lua  map.lua  mapUSA.lua  spawn.lua  testMap.lua  ui_lib.lua
ride_the_rails/utils/: importMap.lua
src/: 01_constants.lua  actions.lua  ask.lua  basic_action.lua  britania.lua  britania23.lua  endGame.lua  game.lua  geometry.lua  lib.lua  load_save.lua  main_menu.lua  mapEast.lua  mapOriginal.lua  mapOriginal23.lua  spawn.lua  test.lua  ui.xml  urls.lua
tts/: CHANGELOG.md  Line.hs  Main.hs  tts.cabal
