cabal-version:       >=1.10
name:                tts
version:             0.1.0.0
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable tts
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.13,
    text,
    bytestring,
    vector,
    aeson
  -- hs-source-dirs:
  default-language:    Haskell2010

executable line
  main-is: Line.hs
  build-depends: base
