cabal-version:       >=1.10
name:                common-utils
version:             0.1.0.0
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Common.Basics,
    Common.Utils,
    Common.Field,
    Common.CallJS,
    Common.SaveLoad
  build-depends:
    base >=4.13, containers, text, tf-random, aeson, vector, template-haskell,
    bytestring, zlib, base64-bytestring
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, OverloadedStrings, DeriveGeneric,
    FlexibleContexts, MonoLocalBinds, GeneralizedNewtypeDeriving



